--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Ever GitHub Repo</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis ratione aliquid nemo a, quo natus autem maxime eos porro accusantium perferendis voluptates assumenda officiis iure nobis ullam debitis, asperiores quod.</p>
+    </div>
 </body>
 </html>
