--- a/summary.html
+++ b/summary.html
@@ -9,7 +9,19 @@
  * cd folder name ( folder এ ঢোকার জন্য )
 
 * vs code terminal -> Ctrl + J 
-* git init 
+
+git init 
 git add . ( মানে হচ্ছে যতগুলা ফাইল আছে ততগুলা ফাইল অ্যাড করে ফেলো )
+
+git config -l ( user email & user name check করার জন্য। এরপর এই কমান্ড থেকে বের হওয়ার জন্য wq )
+
+* folder টা Terminal থেকে Direct VS Code  এ ওপেন করার জন্য  code . 
+
+3.5 
+* 2nd time code push করার জন্য 3 টা command দিতে হবে 
+git add . 
+git commit -m "message"
+git push 
+
 --
 
