--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
     <div>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis ratione aliquid nemo a, quo natus autem maxime eos porro accusantium perferendis voluptates assumenda officiis iure nobis ullam debitis, asperiores quod.</p>
     </div>
+    <h3>How to push incremental code </h3>
+    <ol>
+        <li>git add . </li>
+        <li>git commit -m "message"</li>
+        <li>git push</li>
+    </ol>
 </body>
 </html>
